[project]
name = "mood-tracker-backend"
version = "0.0.1"
description = "Бэкенд для трекера настроения"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pydevd-pycharm~=252.27397.106",
    "ruff>=0.14.3",
]
